# fatapi_servicio

./: .gitignore  db.py  main.py  models.py  pyproject.toml
common/: guards.py
repository/: userRepository.py
routers/: enrolment.py  partners.py  projects.py  users.py  verification_tokens.py
security/: firebase.py
